--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,11 @@
+$primary : #222;
 
-
+body {
+    background-color: $primary;
+}
+.signature > img{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 100px;
+}
